<resources>
    <string name="app_name">ADAS Submission Log</string>
    <string name="qr_scanner">QR scanner</string>
    <string name="qr_generator">QR generator</string>
    <string name="check_status">Logs</string>
    <string name="about">This App was made for Stephannie M. Basa \n JehuAndroidApps © 2023</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="school_name">School Name</string>
    <string name="lr_type">LR Type</string>
    <string name="school_head">School Head</string>
    <string name="generate">Generate</string>
    <string name="qr_Imageview_description">This will hold the QR code bitmap</string>
    <string name="school_name_field">School Name Field</string>
    <string name="school_head_field">School Head Field</string>
    <string name="gen_qr_data">gen_qr_data</string>
    <string name="send_to_messenger">Send to messenger</string>
    <string name="qrInfoTable">QRinfo</string>
    <string name="submissionTable">SubmissionTable</string>
    <string name="sch_name">sch_name</string>
    <string name="sch_head">sch_head</string>
    <string name="sch_id">sch_id</string>
    <string name="lrType">lrType</string>
    <string name="submDate">submDate</string>
    <string name="releDate">releDate</string>
    <string name="timesSubm">timesSubm</string>
    <string name="submBy">submBy</string>
    <string name="releWhom">releWhom</string>
    <string name="submDiv">submDiv</string>
    <string name="whenSubmDiv">whenSubmDiv</string>
    <string name="save">save</string>
    <string name="released_to">Released to</string>
    <string name="submitted_by">Submitted by(required)</string>
    <string name="date_of_release">Date of release</string>
    <string name="date_of_submission">Date of submission(required)</string>
    <string name="type_of_lr">Type of LR</string>
    <string name="type_of_liquidation_report">Type of liquidation report(required):</string>
    <string name="times_submitted">Times submitted(required)</string>
    <string name="submitted_to_division">Submitted to division</string>
    <string name="division_submission_date">Division submission date</string>
    <string name="calendar_picker_desc">when click calendar picker will open.</string>
    <string name="released_to_same_person">Released to same person</string>
    <string name="reopen_camera_button">Reopen camera button</string>
    <string name="just_a_tint_if_the_camera_is_disabled">just a tint if the camera is disabled</string>
    <string name="_1st">1st</string>
    <string name="_2nd">2nd</string>
    <string name="_3rd">3rd</string>
    <string name="_4th">4th</string>
    <string name="additional">Additions</string>
    <string name="passed_to_division">Passed to Division:</string>
    <string name="old_data">old_data</string>
    <string name="just_a_decorative_image">just a decorative image</string>
    <string name="submission_logs">Submission Logs</string>
    <string name="submission_date">Submission date:</string>
    <string name="released_date">Released date:</string>
    <string name="division_submission_date_label">Division submission date:</string>
    <string name="submitted_by_label">Submitted by:</string>
    <string name="released_to_label">Released to:</string>
    <string name="no_of_items_label">No. of items:</string>
    <string name="filter">Filter</string>
    <string name="print">Print</string>
    <string name="button_for_saving_the_table_to_pdf_SD">Button for saving the table to PDF</string>
    <string name="about_bottom_nav">About</string>
    <string name="just_a_logo">Just a logo</string>
    <string name="about_desc">Department of Education \n Administrative Assistant Log App</string>
    <string name="open_camera">Open camera</string>
    <string name="clear_field">clear_field</string>
    <string name="firebase_qrdata_ref">QRDATA</string>
    <string name="firebase_liquidationLog_ref">Liquidation_Log</string>
    <string name="email">jehubasa96@gmail.com</string>
    <string name="password">zero2012</string>
    <string name="imagebackground">imagebackground</string>
    <string name="type_of_liquidation_report_label">Type of liquidation report</string>
    <string name="status_instructions">This page will show all the existing data you entered.\nTo start, tap the filter button and input the range of the\n submission date you want to show.\n\n You can save the table as PDF by tapping\n the save button on the upper right corner.</string>
    <string name="additions">Additions</string>
    <string name="for_filter_options_FAB">for filter options</string>
    <string name="name_of_school">Name of School</string>

    <string-array name="lr_types">
        <item>1st Quarter</item>
        <item>2nd Quarter</item>
        <item>3rd Quarter</item>
        <item>4th Quarter</item>
        <item>Additions</item>
    </string-array>

</resources>